fixed footer gap in blogs

--- a/css/blog-stylesheet.css
+++ b/css/blog-stylesheet.css
@@ -8,7 +8,7 @@ body {
 .page-container {
   max-width: 800px;
   width: 100%;
-  padding: 20px;
+  padding: 0px 20px 0; /* top:20px, sides:20px, bottom:0 */
 }
 
 .toc {
@@ -105,7 +105,7 @@ pre.output {
 /* Outer code box */
 pre.line-numbers {
   border-radius: 4px;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.4);
+  /*box-shadow: 0 4px 16px rgba(0,0,0,0.4);*/
   padding: 12px 16px;
   /*font-family: 'Comic Mono', monospace;*/
   font-size: 14px;
